Partial fix for flickering scroller. Remaining is the timing on the far right image

--- a/css/scroller.css
+++ b/css/scroller.css
@@ -1,6 +1,6 @@
 .scrollerElement {
     position: absolute;
-    width: 33.33%;
+    width: calc(33.33% + 1px);
     height: 100%;
     top: 0;
     bottom: 0;
