--- a/css/style.css
+++ b/css/style.css
@@ -737,7 +737,7 @@ nav {
     width: 5%;
     z-index: 10000000000000000000;
     white-space: nowrap;
-    margin-right: 15px;
+    
 }
 
 .dot {
